--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-#server.port = 8089
+#server.port = 8090
 spring.profiles.active=test 
+#spring.profiles.active=dev
 
 jwt.secret=StringUsadaParaGerarToken
 jwt.expiration=604800000
