--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -1,8 +1,9 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2-console
 
 
-#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
