--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://http://localhost:3306/managerbook
 spring.datasource.data-username=root
 spring.datasource.data-password=para2000
 
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
